# ai-course-hw1

./: play.py  pyproject.toml
agents/: mcts_agent.py  minimax_agent.py  random_agent.py
ui/: __init__.py  go_gui.py
