[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-course-hw1"
version = "0.1.0"
description = "Go AI homework project"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
go-play = "play:main"

[tool.setuptools]
py-modules = ["play"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "dlgo*", "ui*"]
